[build-system]

requires = ["setuptools>=61", "wheel"]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

where = ["src"]

[project]

name = "cavar"

version = "1.0b1"

description = "Check status of CRISPR-Cas9 off-targets from genomic variants"

readme = "README.md"

requires-python = ">=3.9"

license = "GPL-3.0-OR-later"

license-files = ["LICEN[CS]E*"]

authors = [{name = "Prosad Kumar Das", email = "sazbio2026@outlook.com"}]

maintainers = [{name = "Prosad Kumar Das", email = "sazbio2026@outlook.com"}]

dependencies = [
	"cyvcf2==0.31.4",
	"pysam==0.23.3"
]

keywords = [
	"bioinformatics",
	"genomics",
	"DNA",
	"FASTA",
	"variants",
	"CRISPR",
	"CRISPR-Cas9",
	"off-target",
	"NGS",
	"genome",
	"biology"
]

classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: POSIX",
	"Operating System :: Unix",
	"Operating System :: MacOS",
	"Operating System :: Windows",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Natural Language :: English"
]

[project.scripts]

cavar = "cavar.cli:main"

[project.urls]

Homepage = "https://github.com/dasprosad/cavar"

Repository = "https://github.com/dasprosad/cavar"

Issues = "https://github.com/dasprosad/cavar/issues"
